fixed buttons gap

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ p{
 }
 
 #no:hover{
-  background-color: #e9d3d3f6;
+  background-color: #e2d8d8f6;
   
 }
 
